[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/Medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Title1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Menu/Menu_Settings.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Regular.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Menu/ButtonIndicator_Loading.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Menu/ButtonIndicator_not-implemented.gd" type="Script" id=9]

[node name="Settings" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.305882, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="UI"]
margin_left = 60.0
margin_top = 40.0
margin_right = 674.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Label" parent="UI/Settings"]
margin_left = 40.0
margin_top = 160.0
margin_right = 515.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 6 )
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Render distance" type="Label" parent="UI/Settings/Graphics"]
margin_left = 20.0
margin_top = 70.0
margin_right = 495.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
text = "Render distance:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="UI/Settings/Graphics/Render distance"]
margin_left = 300.0
margin_right = 775.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_Rdist" type="HSlider" parent="UI/Settings/Graphics/Render distance"]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0
min_value = 1024.0
max_value = 8192.0
step = 1024.0
value = 8192.0
rounded = true
tick_count = 8
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees distance" type="Label" parent="UI/Settings/Graphics"]
margin_left = 20.0
margin_top = 150.0
margin_right = 495.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 1 )
text = "Trees distance:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="UI/Settings/Graphics/Trees distance"]
margin_left = 300.0
margin_right = 775.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_Tdist" type="HSlider" parent="UI/Settings/Graphics/Trees distance"]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0
min_value = 200.0
max_value = 800.0
step = 100.0
value = 400.0
rounded = true
tick_count = 7
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass distance" type="Label" parent="UI/Settings/Graphics"]
margin_left = 20.0
margin_top = 230.0
margin_right = 495.0
margin_bottom = 281.0
custom_fonts/font = ExtResource( 1 )
text = "Grass distance:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="UI/Settings/Graphics/Grass distance"]
margin_left = 300.0
margin_right = 775.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_Gdist" type="HSlider" parent="UI/Settings/Graphics/Grass distance"]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0
max_value = 600.0
step = 50.0
value = 200.0
rounded = true
tick_count = 7
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass density" type="Label" parent="UI/Settings/Graphics"]
margin_left = 20.0
margin_top = 310.0
margin_right = 495.0
margin_bottom = 361.0
custom_fonts/font = ExtResource( 1 )
text = "Grass density:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="UI/Settings/Graphics/Grass density"]
margin_left = 300.0
margin_right = 775.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_Gdens" type="HSlider" parent="UI/Settings/Graphics/Grass density"]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0
min_value = 0.5
max_value = 3.0
step = 0.5
value = 1.5
tick_count = 6
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="UI/Settings"]
margin_left = 472.0
margin_top = 160.0
margin_right = 947.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 6 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse speed" type="Label" parent="UI/Settings/Controls"]
margin_left = 20.0
margin_top = 70.0
margin_right = 495.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
text = "Mouse sensitivity:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="UI/Settings/Controls/Mouse speed"]
margin_left = 300.0
margin_right = 775.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "???"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider_Mspd" type="HSlider" parent="UI/Settings/Controls/Mouse speed"]
margin_top = 40.0
margin_right = 300.0
margin_bottom = 80.0
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicators" type="Node" parent="UI"]

[node name="Loading" type="Label" parent="UI/Indicators"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -130.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 6 )
text = " Loading..."
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Indicators/Loading"]
show_behind_parent = true
margin_right = 350.0
margin_bottom = 82.0
color = Color( 0.113725, 0.113725, 0.113725, 0.980392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="not implemented" type="Label" parent="UI/Indicators"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -130.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 6 )
text = " not implemented"
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Indicators/not implemented"]
show_behind_parent = true
margin_right = 400.0
margin_bottom = 82.0
color = Color( 0.537255, 0, 0, 0.980392 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="UI/Settings/Graphics/Render distance/Slider_Rdist" to="." method="_on_Slider_Rdist_value_changed"]
[connection signal="value_changed" from="UI/Settings/Graphics/Trees distance/Slider_Tdist" to="." method="_on_Slider_Tdist_value_changed"]
[connection signal="value_changed" from="UI/Settings/Graphics/Grass distance/Slider_Gdist" to="." method="_on_Slider_Gdist_value_changed"]
[connection signal="value_changed" from="UI/Settings/Graphics/Grass density/Slider_Gdens" to="." method="_on_Slider_Gdens_value_changed"]
[connection signal="value_changed" from="UI/Settings/Controls/Mouse speed/Slider_Mspd" to="." method="_on_Slider_Mspd_value_changed"]
